[package]
name = "logsy"
description = "Just logging as it should be"
version = "1.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["log", "simplelog", "filelog", "logging"]
documentation = "https://docs.rs/logsy/"
repository = "https://github.com/vdudouyt/logsy"

[dependencies]
anstyle = { version = "1.0.11", optional = true }
humantime = { version = "2.3.0", optional = true }
log = "0.4.28"

[features]
default = ["time", "styled", "env", "file"]
time = ["dep:humantime"]
styled = ["dep:anstyle"]
env = []
file = []

[dev-dependencies]
tempdir = "0.3.7"
